[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/menu/pointer.png" type="Texture" id=1]
[ext_resource path="res://src/menu/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/menu/ita_opzioni.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/ita_riprendi.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/ita_esci.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/poof_menu_pausa.png" type="Texture" id=6]

[node name="PauseScreen" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -209.0
margin_right = 177.0
margin_bottom = 209.0
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 172, 152 )
scale = Vector2( 1.28988, 1.1999 )
texture = ExtResource( 6 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_top = 47.0
margin_right = 357.0
margin_bottom = 370.0

[node name="ResumeButton" type="TextureButton" parent="Menu"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_right = 357.0
margin_bottom = 105.0
texture_normal = ExtResource( 4 )

[node name="OptionsButton" type="TextureButton" parent="Menu"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_top = 109.0
margin_right = 357.0
margin_bottom = 214.0
texture_normal = ExtResource( 3 )

[node name="BackToTitleButton" type="TextureButton" parent="Menu"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_top = 218.0
margin_right = 357.0
margin_bottom = 323.0
texture_normal = ExtResource( 5 )

[node name="Pointer" type="Sprite" parent="."]
position = Vector2( -50, 45 )
texture = ExtResource( 1 )

[connection signal="mouse_entered" from="Menu/ResumeButton" to="." method="_on_enter_button_number" binds= [ 0 ]]
[connection signal="mouse_exited" from="Menu/ResumeButton" to="." method="_on_exited_button_number" binds= [ 0 ]]
[connection signal="pressed" from="Menu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="mouse_entered" from="Menu/OptionsButton" to="." method="_on_enter_button_number" binds= [ 1 ]]
[connection signal="mouse_exited" from="Menu/OptionsButton" to="." method="_on_exited_button_number" binds= [ 1 ]]
[connection signal="pressed" from="Menu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="Menu/BackToTitleButton" to="." method="_on_enter_button_number" binds= [ 2 ]]
[connection signal="mouse_exited" from="Menu/BackToTitleButton" to="." method="_on_exited_button_number" binds= [ 2 ]]
[connection signal="pressed" from="Menu/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]
